# Cedarvault-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  linux_setup.sh  readme.md  windows_setup.bat
Editor/: CMakeLists.txt
Editor/TankGame/: Chopper.cs  Tank.cs  TankGame.csproj
Editor/include/: EditorLayer.h  OpenGlLayer.h
Editor/include/Panels/: AssetPanel.h  SceneHierarchy.h
Editor/src/: EditorApp.cpp  EditorLayer.cpp  OpenGlLayer.cpp
Editor/src/Panels/: AssetPanel.cpp  SceneHierarchy.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.h  CedarAssert.h  CedarVault.h
Engine/include/Application/: Application.h  Camera.h  Context.h  Layer.h  Overlay.h
Engine/include/Common/: AssetManager.h  CedarTime.h  Constants.h  Core.h  EntryPoint.h  Gameplay.h  Guid.h  Input.h  KeyCodes.h  LayerStack.h  Logger.h  MouseCodes.h  SDL_Wrapper.h  Time.h  Utils.h
Engine/include/Common/Event/: EventBus.h  EventCallback.h  EventRegistry.h
Engine/include/Common/Event/Events/: CollisionEnterEvent.h  CollisionEvent.h  CollisionExitEvent.h  Events.h  IEvent.h  KeyboardEvents.h  WindowEvents.h
Engine/include/Common/Event/Events/Mouse/: MouseEvents.h
Engine/include/Common/Mindi/: Mindi.h  json_node.h  json_reader.h  json_writer.h
Engine/include/ECS/: ECS.h  Pool.h
Engine/include/ECS/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  Component.h  Components.h  IDComponent.h  RigidbodyComponent.h  ScriptComponent.h  SpriteComponent.h  TransformComponent.h
Engine/include/ECS/Systems/: AnimationSystem.h  CameraFollowSystem.h  CollisionSystem.h  MeanScriptSystem.h  MovementSystem.h  RenderBoxColliderSystem.h  RenderSystem.h  ScriptSystem.h
Engine/include/Luie/: LuaBehaviour.h  Luie.h  LuieBindings.h
Engine/include/Luie/lua/: Components.lua  Keyboard.lua  LuaBehaviour.lua  LuieScript.lua
Engine/include/MeanScript/: MeanScript.h  MeanScriptBindings.h
Engine/include/MeanScript/MeanManaged/GameScripting/: Entity.cs  GameScripting.csproj  MeanNativeApi.cs  MeanScriptBehaviour.cs  MeanScriptEngine.cs  Tank.cs
Engine/include/MeanScript/MeanManaged/GameScripting/Common/: KeyCodes.cs
Engine/include/MeanScript/MeanManaged/GameScripting/Components/: Components.cs
Engine/include/MeanScript/MeanManaged/MeanScripting/: MeanNativeApi.cs  MeanScriptBehaviour.cs  MeanScriptEngine.cs  ScriptAssemblyResolver.cs  Tank.cs
Engine/include/MeanScript/MeanManaged/MeanScripting/Common/: Input.cs  Log.cs
Engine/include/MeanScript/MeanManaged/MeanScripting/Components/: AnimationComponent.cs  Components.cs  InitComponents.cs  RigidBodyComponent.cs  SpriteComponent.cs  TransformComponent.cs
Engine/include/MeanScript/MeanManaged/MeanScripting/Primitives/: MeanString.cs
Engine/include/MeanScript/Primitives/: MeanString.h
Engine/include/Registry/: TypeRegistry.h
Engine/include/Renderer/: Camera2D.h
Engine/include/Scene/: Scene.h  SceneManager.h
Engine/include/imgui/: ImGuiLayer.h
Engine/src/: Application.cpp  CedarVault.cpp
Engine/src/Application/: Application.cpp  Context.cpp  Overlay.cpp
Engine/src/Common/: AssetManager.cpp  CrossInput.cpp  Guid.cpp  LayerStack.cpp  Utils.cpp
Engine/src/Common/Event/: EventBus.cpp
Engine/src/Common/Mindi/: json_node.cpp  json_reader.cpp  json_writer.cpp
Engine/src/ECS/: ECS.cpp
Engine/src/ECS/Components/: Component.cpp
Engine/src/Luie/: Luie.cpp
Engine/src/MeanScript/: MeanScript.cpp  MeanScriptBindings.cpp
Engine/src/MeanScript/Primitives/: MeanString.cpp
Engine/src/Registry/: TypeRegistry.cpp
Engine/src/Renderer/: Camera2D.cpp
Engine/src/Scene/: Scene.cpp  SceneManager.cpp
Engine/src/imgui/: ImGuiLayer.cpp
Game/: CMakeLists.txt
Game/TankGame/: Chopper.cs  Tank.cs  TankGame.csproj
Game/assets/configurations/: jungleConfig.json  jungleLevel.json  lotr.json
Game/assets/levels/: level1.json
Game/assets/scripts/: Tank.lua  chopper.lua  testLua.lua
Game/src/: GameLayer.cpp  GameLayer.h  TankApp.cpp  TestOverlay.cpp  TestOverlay.h  main.cpp
cmake/: CompilerOptions.cmake  MeanScriptDotnetSetup.cmake
